titulo finalizado e inputs em andamento

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="cssReset.css">
   <link rel="stylesheet" href="style.css">
   <title>Login</title>
@@ -17,14 +21,30 @@
     </div>
 
     <div class="caixa_inputs">
-      <form action="">
+      <form class="form_inputs">
         <label for="">E-mail</label>
-        <input type="submit" value="" placeholder="exemplo@gmail.com">
+        <input type="text" value="" placeholder="exemplo@gmail.com">
       </form>
-      <form action="">
+      <form class="form_inputs">
         <label for="">Senha</label>
-        <input type="submit" value="" placeholder="0123456789">
+        <input type="text" value="" placeholder="0123456789">
       </form>
+    </div>
+
+    <div class="link">
+      <form action="">
+        <input type="radio">
+        <label for="">Lembre de mim </label>
+      </form>
+      <a href="http://">Esqueceu sua senha?</a>
+    </div>
+
+    <div class="botoes">
+      <input type="submit" placeholder="Entrar na conta">
+      <div class="google">
+        <img src="" alt="">
+        <input type="submit" value="" placeholder="Ou faça login com o Google">
+      </div>
     </div>
 
 
