Mobile: Ajuste inputs text e link

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="caixa_inputs">
       <form class="form_inputs">
         <label for="">E-mail</label>
-        <input type="text" value="" placeholder="exemplo@gmail.com">
+        <input class="input_text" type="text" value="" placeholder="exemplo@gmail.com">
       </form>
       <form class="form_inputs">
         <label for="">Senha</label>
-        <input type="text" value="" placeholder="0123456789">
+        <input class="input_text" type="text" value="" placeholder="0123456789">
       </form>
     </div>
 
@@ -36,7 +36,7 @@
         <input type="radio">
         <label for="">Lembre de mim </label>
       </form>
-      <a href="http://">Esqueceu sua senha?</a>
+      <a class="link_ajuda_senha" href="http://www.google.com.br/?hl=pt-BR">Esqueceu sua senha?</a>
     </div>
 
     <div class="botoes">
