Ajustes botoes em andamento

--- a/index.html
+++ b/index.html
@@ -29,22 +29,24 @@
         <label for="">Senha</label>
         <input class="input_text" type="text" value="" placeholder="0123456789">
       </form>
-    </div>
-
-    <div class="link">
-      <form action="">
-        <input type="radio">
-        <label for="">Lembre de mim </label>
-      </form>
-      <a class="link_ajuda_senha" href="http://www.google.com.br/?hl=pt-BR">Esqueceu sua senha?</a>
+      <div class="link">
+        <form action="">
+          <input type="radio">
+          <label for="">Lembre de mim </label>
+        </form>
+        <a class="link_ajuda_senha" href="http://www.google.com.br/?hl=pt-BR">Esqueceu sua senha?</a>
+      </div>
     </div>
 
     <div class="botoes">
-      <input type="submit" placeholder="Entrar na conta">
-      <div class="google">
-        <img src="" alt="">
-        <input type="submit" value="" placeholder="Ou faça login com o Google">
-      </div>
+      <form action="">
+        <input id="botao_conta" class="input_botao" type="submit" value="Entrar na conta">
+      </form>
+
+        <form  class="faca_login">
+          <img src="icon/icon.svg" alt="icon_google">
+          <input id="login" type="submit" value="Ou faça login com o Google">
+        </form>
     </div>
 
 
