--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <input type="radio">
           <label class="Lembre" for="">Lembre de mim </label>
         </form>
-        <a class="link_ajuda_senha" href="http://www.google.com.br/?hl=pt-BR">Esqueceu sua senha?</a>
+        <a class="link_ajuda_senha" href="#">Esqueceu sua senha?</a>
       </div>
     </div>
 
@@ -49,7 +49,7 @@
     </div>
 
     <div class="caixa_cadastre">
-      <p id="text_cadastrese">Não tem uma conta? <span ><a id="link_cadastrese" href="http://www.google.com.br/?hl=pt-BR">Cadastre-se</a></span></p>
+      <p id="text_cadastrese">Não tem uma conta? <span ><a id="link_cadastrese" href="#">Cadastre-se</a></span></p>
     </div>
 
 
