--- a/index.html
+++ b/index.html
@@ -14,46 +14,45 @@
 </head>
 
 <body>
-  <section id="container">
-    <div class="titulo">
-      <h3>Bem-vindo de volta</h3>
-      <h1>Faça login na sua conta</h1>
-    </div>
-
-    <div class="caixa_inputs">
-      <form class="form_inputs">
-        <label for="">E-mail</label>
-        <input class="input_text" type="text" value="" placeholder="exemplo@gmail.com">
-      </form>
-      <form class="form_inputs">
-        <label for="">Senha</label>
-        <input class="input_text" type="text" value="" placeholder="0123456789">
-      </form>
-
-      <div class="link">
-        <form id="form_radio" action="">
-          <input type="radio">
-          <label class="Lembre" for="">Lembre de mim </label>
-        </form>
-        <a class="link_ajuda_senha" href="#">Esqueceu sua senha?</a>
+  <section id="container_img">
+    <img id="img_desktop" src="assents/svg_img_desktop.png" alt="">
+  </section>
+  <section id="body_login">
+    <section id="container">
+      <div class="titulo">
+        <h3>Bem-vindo de volta</h3>
+        <h1>Faça login na sua conta</h1>
       </div>
-    </div>
-
-    <div class="botoes">
-      <button id="botao_conta" type="button"><p>Entrar na conta</p>
-      </button>
-      <button id="login" type="button">
-        <img src="icon/icon.svg" alt="icon_google">
-        <p class="text_login">Ou faça login com o Google</p>
-      </button>      
-    </div>
-
-    <div class="caixa_cadastre">
-      <p id="text_cadastrese">Não tem uma conta? <span ><a id="link_cadastrese" href="#">Cadastre-se</a></span></p>
-    </div>
-
-
-
+      <div class="caixa_inputs">
+        <form class="form_inputs">
+          <label for="">E-mail</label>
+          <input class="input_text" type="text" value="" placeholder="exemplo@gmail.com">
+        </form>
+        <form class="form_inputs">
+          <label for="">Senha</label>
+          <input class="input_text" type="text" value="" placeholder="0123456789">
+        </form>
+        <div class="link">
+          <form id="form_radio" action="">
+            <input type="radio">
+            <label class="Lembre" for="">Lembre de mim </label>
+          </form>
+          <a class="link_ajuda_senha" href="#">Esqueceu sua senha?</a>
+        </div>
+      </div>
+      <div class="botoes">
+        <button id="botao_conta" type="button">
+          <p>Entrar na conta</p>
+        </button>
+        <button id="login" type="button">
+          <img src="icon/icon.svg" alt="icon_google">
+          <p class="text_login">Ou faça login com o Google</p>
+        </button>
+      </div>
+      <div class="caixa_cadastre">
+        <p id="text_cadastrese">Não tem uma conta? <span><a id="link_cadastrese" href="#">Cadastre-se</a></span></p>
+      </div>
+    </section>
   </section>
 </body>
 
